--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,12 @@
               Write a simple, clear plan describing how you will build your puzzle in HTML, CSS, and
               JavaScript.<br>
               <em>Example structure:</em><br>
-              – Build the basic HTML structure (layout, headings, input boxes, buttons).<br>
+              – Research how to collaborate with VS Code and Github<br>
+              - Create files in VS Code (index.html, script.js, style.css)
+              - Gather / create images & photos
+              - Adjust images (Canva/PhotoShop)
+              - Upload images to VS Code
+              - Build the basic HTML structure (layout, headings, input boxes, buttons).<br>
               – Add CSS to create the layout and style.<br>
               – Write JavaScript to check the user’s input.<br>
               – Add feedback messages and clue reveals.<br>
@@ -1104,7 +1109,7 @@
             <li>
               <strong>What You Need to Learn (A2 Integration)</strong><br>
               List the skills or knowledge you still need in order to build your puzzle (for example:
-              how to check input with JavaScript, how to show/hide elements, how to style buttons).<br>
+              how to collaborate using VS Code & Github), how to check input with JavaScript, how to show/hide elements, how to style buttons).<br>
               Briefly explain <strong>how you will learn</strong> these skills, such as:<br>
               – asking your teacher<br>
               – using Gemini AI<br>
