--- a/index.html
+++ b/index.html
@@ -1087,24 +1087,32 @@
           </p>
 
           <p><strong>In your portfolio, include:</strong></p>
-          <ul>
-            <li>
-              <strong>Coding Plan (Step-by-Step Build Plan)</strong><br>
-              Write a simple, clear plan describing how you will build your puzzle in HTML, CSS, and
-              JavaScript.<br>
-              <em>Example structure:</em><br>
-              – Research how to collaborate with VS Code and Github<br>
-              - Create files in VS Code (index.html, script.js, style.css)
-              - Gather / create images & photos
-              - Adjust images (Canva/PhotoShop)
-              - Upload images to VS Code
-              - Build the basic HTML structure (layout, headings, input boxes, buttons).<br>
-              – Add CSS to create the layout and style.<br>
-              – Write JavaScript to check the user’s input.<br>
-              – Add feedback messages and clue reveals.<br>
-              – Test everything and fix errors.<br>
-              Keep it realistic and achievable.
-            </li>
+```html
+<ul>
+  <li>
+    <strong>Coding Plan (Step-by-Step Build Plan)</strong><br>
+    Write a simple, clear plan describing how you will build your puzzle in HTML, CSS, and JavaScript.
+    <br><br>
+    <em>Example structure:</em>
+    <ul>
+      <li>Research how to collaborate with VS Code and GitHub</li>
+      <li>
+        Set up project files
+        <ul>
+          <li>Create files in VS Code (index.html, script.js, style.css)</li>
+          <li>Gather or create images and photos</li>
+          <li>Adjust images (Canva / Photoshop)</li>
+          <li>Upload images to VS Code</li>
+        </ul>
+      </li>
+      <li>Build the basic HTML structure (layout, headings, input boxes, buttons)</li>
+      <li>Add CSS to create the layout and style</li>
+      <li>Write JavaScript to check the user’s input</li>
+      <li>Add feedback messages and clue reveals</li>
+      <li>Test everything and fix errors</li>
+    </ul>
+    Keep it realistic and achievable.
+  </li>
 
             <li>
               <strong>What You Need to Learn (A2 Integration)</strong><br>
