--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
 ```html
 <ul>
   <li>
-    <strong>Coding Plan (Step-by-Step Build Plan)</strong><br>
+    <strong>Coding Plan (Step-by-Step Build Plan)</strong><br><br>
     Write a simple, clear plan describing how you will build your puzzle in HTML, CSS, and JavaScript.
     <br><br>
     <em>Example structure:</em>
@@ -1110,12 +1110,12 @@
       <li>Write JavaScript to check the user’s input</li>
       <li>Add feedback messages and clue reveals</li>
       <li>Test everything and fix errors</li>
-    </ul>
-    Keep it realistic and achievable.
+    </ul><br>
+    Keep it realistic and achievable.<br>
   </li>
 
             <li>
-              <strong>What You Need to Learn (A2 Integration)</strong><br>
+              <strong>What You Need to Learn (A2 Integration)</strong><br><br>
               List the skills or knowledge you still need in order to build your puzzle (for example:
               how to collaborate using VS Code & Github), how to check input with JavaScript, how to show/hide elements, how to style buttons).<br>
               Briefly explain <strong>how you will learn</strong> these skills, such as:<br>
