--- a/index.html
+++ b/index.html
@@ -1094,23 +1094,25 @@
     Write a simple, clear plan describing how you will build your puzzle in HTML, CSS, and JavaScript.
     <br><br>
     <em>Example structure:</em>
-    <ul>
+    <table>
       <li>Research how to collaborate with VS Code and GitHub</li>
       <li>
-        Set up project files
-        <ul>
-          <li>Create files in VS Code (index.html, script.js, style.css)</li>
-          <li>Gather or create images and photos</li>
-          <li>Adjust images (Canva / Photoshop)</li>
-          <li>Upload images to VS Code</li>
-        </ul>
+        <tr>
+          <td>Set up project files</td>
+          <td>Create files in VS Code (index.html, script.js, style.css)</td>
+          <td>Feb 03</td>
+          </tr>
+          <td>Gather or create images and photos</td>
+          <td>Adjust images (Canva / Photoshop)</td>
+          <td>Upload images to VS Code</td>
+        </tr>
       </li>
       <li>Build the basic HTML structure (layout, headings, input boxes, buttons)</li>
       <li>Add CSS to create the layout and style</li>
       <li>Write JavaScript to check the user’s input</li>
       <li>Add feedback messages and clue reveals</li>
       <li>Test everything and fix errors</li>
-    </ul><br>
+    </table><br>
     Keep it realistic and achievable.<br>
   </li>
 
