--- a/index.html
+++ b/index.html
@@ -1095,23 +1095,55 @@
     <br><br>
     <em>Example structure:</em>
     <table>
-      <li>Research how to collaborate with VS Code and GitHub</li>
-      <li>
+      <th>
+        <td>Task</td>
+        <td>Due Date</td>
+      </th>
+      <tr>
+        <td>Research how to collaborate with VS Code and GitHub</td>
+        <td>Feb 02</td>
+      </tr>
+      <tr>
+        <td>Set up project files</td>
+        <td>Feb 02</td>
+      </tr>
+      <tr>
+        <td>Create files in VS Code (index.html, script.js, style.css)</td>
+        <td>Feb 03</td>
+      </tr>
+      <tr>
+        <td>Gather or create images and photos</td>
+        <td>Feb 05</td>
+      </tr>
+      <tr>
+        <td>Adjust images (Canva / Photoshop)</td>
+        <td>Feb 05</td>
+      </tr>
+      <tr>
+        <td>Upload images to VS Code</td>
+        <td>Feb 06</td>
+      </tr>
+      <tr>
         <tr>
-          <td>Set up project files</td>
-          <td>Create files in VS Code (index.html, script.js, style.css)</td>
-          <td>Feb 03</td>
-          </tr>
-          <td>Gather or create images and photos</td>
-          <td>Adjust images (Canva / Photoshop)</td>
-          <td>Upload images to VS Code</td>
-        </tr>
-      </li>
-      <li>Build the basic HTML structure (layout, headings, input boxes, buttons)</li>
-      <li>Add CSS to create the layout and style</li>
-      <li>Write JavaScript to check the user’s input</li>
-      <li>Add feedback messages and clue reveals</li>
-      <li>Test everything and fix errors</li>
+        <td>Build the basic HTML structure (layout, headings, input boxes, buttons)</td>
+        <td>Feb 07</td>
+      </tr>
+      <tr>
+        <td>Add CSS to create the layout and style</td>
+        <td>Feb 15</td>
+      </tr>
+      <tr>
+        <td>Write JavaScript to check the user’s input</td>
+        <td>Feb 20</td>
+      </tr>
+      <tr>
+        <td>Add feedback messages and clue reveals</td>
+        <td>Feb 28</td>
+      </tr>
+      <tr>
+        <td>Test everything and fix errors</td>
+        <td>March 06</td>
+      </tr>
     </table><br>
     Keep it realistic and achievable.<br>
   </li>
