--- a/index.html
+++ b/index.html
@@ -1095,10 +1095,10 @@
     <br><br>
     <em>Example structure:</em>
     <table>
-      <th>
-        <td>Task</td>
-        <td>Due Date</td>
-      </th>
+      <tr>
+        <th>Task</th>
+        <th>Due Date</th>
+      </tr>
       <tr>
         <td>Research how to collaborate with VS Code and GitHub</td>
         <td>Feb 02</td>
