--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,7 @@
             Before you start building, explain <strong>how</strong> you plan to turn your design into a
             functioning coded puzzle — and what you still need to learn. This strand also supports
             your research (A2) by identifying what you need to find out to make your solution work.
+            A good plan must include time estimates.
           </p>
 
           <p><strong>In your portfolio, include:</strong></p>
