--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
         <td>March 06</td>
       </tr>
     </table><br>
-    Keep it realistic and achievable.<br>
+    <em>Keep it realistic and achievable.</em><br><br>
   </li>
 
             <li>
@@ -1162,8 +1162,8 @@
           </ul>
 
           <p><strong>Goal:</strong><br>
-            By the end of C1, you should know <em>what</em> you’re building, <em>how</em> you’ll build it, and
-            <em>what you need to learn</em> to make it happen.
+            By the end of C1, you should know <em>what</em> you’re building, <em>how</em> you’ll build it, 
+            <em>what you need to learn</em> to make it happen, and <em>by when</em> each task will be accomplished.
           </p>
 
           <!-- C2 -->
