--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
         <td>March 06</td>
       </tr>
     </table><br>
-    <em>Keep it realistic and achievable.</em><br><br>
+    <em>Keep your plan realistic and achievable.</em><br><br>
   </li>
 
             <li>
