--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,12 @@
       </tr>
       <tr>
         <td>Test everything and fix errors</td>
-        <td>March 06</td>
+        <td>March 20</td>
+      </tr>
+      <tr>
+        <td>Publish final product using Github Pages.<br>
+        Share the published URL with the next team in the story.</td>
+        <td>March 27</td>
       </tr>
     </table><br>
     <em>Keep your plan realistic and achievable.</em><br><br>
