--- a/index.html
+++ b/index.html
@@ -671,38 +671,38 @@
           <article id="vocabulary">
             <h3>Vocabulary</h3>
             <ul>
-              <li><strong>HTML</strong> — Structure of a page using tags like <code>&lt;h1&gt;</code>,
-                <code>&lt;p&gt;</code>, <code>&lt;img&gt;</code>.
-              </li>
-              <li><strong>CSS</strong> — Styles (colors, layout). Example: <code>h1 { font-size: 2rem; }</code></li>
-              <li><strong>JavaScript</strong> — Behaviors/interactivity. Example:
-                <code>button.onclick = function () { alert('hi'); };</code>
-              </li>
-              <li><strong>Tag</strong> — The keyword in angle brackets, e.g., <code>&lt;img&gt;</code>.</li>
-              <li><strong>Element</strong> — A tag plus its content/attributes, e.g.,
-                <code>&lt;img src="cat.png" alt="cat" /&gt;</code>.
-              </li>
-              <li><strong>Attribute</strong> — Extra info inside a tag, e.g., <code>src</code>, <code>alt</code>,
-                <code>href</code>.
-              </li>
-              <li><strong>Class</strong> — A reusable style hook, e.g., <code>class="button"</code>.</li>
-              <li><strong>ID</strong> — A unique identifier for one element, e.g., <code>id="start"</code>.</li>
-              <li><strong>DOM</strong> — The live tree of elements JS can read/change.</li>
-              <li><strong>Variable</strong> — A named container for data, e.g., <code>var score = 0;</code></li>
-              <li><strong>Function</strong> — A reusable block of code, e.g.,
-                <code>function add(a,b){ return a+b; }</code>
-              </li>
-              <li><strong>Event</strong> — Something that happens (click, keypress), e.g.,
-                <code>addEventListener('click', ...);</code>
-              </li>
-              <li><strong>Console</strong> — JS messages window. Example: <code>console.log('check');</code></li>
-              <li><strong>Link</strong> — Clickable navigation, e.g.,
-                <code>&lt;a href="#/a"&gt;Criterion A&lt;/a&gt;</code>
-              </li>
-              <li><strong>Image</strong> — <code>&lt;img src="..." alt="..." /&gt;</code> for pictures (PNG/JPG/SVG).
-              </li>
-              <li><strong>Vanilla JavaScript</strong> — Simple JavaScript without the aid of external Libraries or
-                Frameworks.</li>
+<li><strong>attribute</strong> — Extra information inside a tag that gives more details, such as a link address or image description (e.g., <code>src</code>, <code>alt</code>, <code>href</code>).</li>
+
+<li><strong>class</strong> — A name used to group elements so they can share the same styles or behavior (e.g., <code>class="button"</code>).</li>
+
+<li><strong>console (browser console)</strong> — A built-in tool in a web browser where programmers can see messages, errors, and results from their code to help debug and test a webpage.</li>
+
+<li><strong>CSS</strong> — Code used to control how a webpage looks, including colors, fonts, and layout.</li>
+
+<li><strong>DOM</strong> — A live map of all the elements on a webpage that JavaScript can read and change.</li>
+
+<li><strong>element</strong> — A complete part of a webpage made of a tag and its information or content (e.g., an image or paragraph).</li>
+
+<li><strong>event</strong> — Something that happens on a webpage, like a click, key press, or mouse movement.</li>
+
+<li><strong>function</strong> — A named set of instructions that runs when called and can be reused.</li>
+
+<li><strong>HTML</strong> — Code that gives a webpage its structure using tags like headings, paragraphs, images, and links.</li>
+
+<li><strong>ID</strong> — A unique name used to identify one specific element on a webpage.</li>
+
+<li><strong>image</strong> — A picture added to a webpage using an image tag, such as PNG, JPG, or SVG files.</li>
+
+<li><strong>JavaScript</strong> — Code that makes a webpage interactive, such as responding to clicks or changing content.</li>
+
+<li><strong>link</strong> — Clickable text or an image that takes you to another page or section.</li>
+
+<li><strong>tag</strong> — A keyword inside angle brackets that tells the browser what kind of content something is (e.g., <code>&lt;img&gt;</code>).</li>
+
+<li><strong>variable</strong> — A named place in code used to store information that can change.</li>
+
+<li><strong>Vanilla JavaScript</strong> — Plain JavaScript written without using extra libraries or frameworks.</li>
+
 
             </ul>
           </article>
