--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
       display: none !important;
     }
 
+    li {
+      padding-left: 1.5em;   /* space for the indent */
+      text-indent: -1.5em;   /* pull first line back */
+    } 
+
     h3 {
       color: var(--accent-2);
     }
