--- a/index.html
+++ b/index.html
@@ -536,6 +536,8 @@
                 rel="noopener">Feedback ChatBot</a></li>
             <li><a href="https://drive.google.com/drive/folders/1CMtfWd0kRdW4hy1_82mYGh0q_JQNgOfc?usp=sharing"
                 target="_blank" rel="noopener">ISL Campus Photos</a></li>
+            <li><a href="https://classroom.github.com/a/8ytU1dAJ"
+                target="_blank" rel="noopener">Join GitHub Classroom</a></li>
           </ul>
         </div>
 
