--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
           </em>
 
           <p><strong>Task:</strong><br>
-            Collaborate with your partner and with Gemini AI to turn your design into a working coded product using
+            Collaborate with your partner and with <a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing">Gemini AI</a> to turn your design into a working coded product using
             HTML, CSS, and JavaScript. Focus on
             writing clean, readable code and using your plan from C1 to guide your work.
           </p>
