two column list

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
-          <ul>
+          <ul class="two-column-list">
             <li><strong><a
                   href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0"
                   target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
