--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <p class="muted">
                 Decode this ROT13 clue to reveal a 5-letter word you will need below:
                 <strong class="pill"
-                  style="background:rgba(167,139,250,.15); color:var(--accent-2); border-color:rgba(167,139,250,.4)">syvag</strong>
+                  style="background:rgba(167,139,250,.15); color:var(--accent-2); border-color:rgba(167,139,250,.4)">trzvav</strong>
               </p>
               <div class="input">
                 <input id="p2" type="text" placeholder="decoded word (5 letters)" autocomplete="off" />
