--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <details style="margin-top:12px">
                 <summary>Need a hint?</summary>
                 <ul class="muted">
-                  <li>Look closer. The answer is right on the page of the Google Doc.</li>
+                  <li>Look closer. Do you see an unusual menu at the top?</li>
                   <li>ROT13 means each letter shifts by 13. Try the alphabet wheel.</li>
                 </ul>
               </details>
