--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
               <h3 style="margin:0 0 6px 0">Puzzle 1 — Hidden in plain sight</h3>
               <p class="muted">
                 Your first clue is found in the Google Doc titled "
-                <a class="toc" href="https://docs.google.com/document/d/1gmx1pt9fkmVLVMZ7EE6nl6_hDNibrLwSXLhh_71l-Lc/edit?tab=t.0" >
+                <a class="toc" href="https://docs.google.com/document/d/1gmx1pt9fkmVLVMZ7EE6nl6_hDNibrLwSXLhh_71l-Lc/edit?tab=t.0" 
+                target="_blank" rel="noopener">
                 TASK SHEET - MYP4 Design Unit 2 - Code 2 Escape</a>"
               </p>
               <div class="input">
