--- a/index.html
+++ b/index.html
@@ -399,7 +399,10 @@
           <article id="coach">
             <h3>AI Coding Coach</h3>
             <p class="muted">
-              This AI Chatbot is trained to be your coding guide for this unit. You are in charge. Good questions get
+              <a class="toc"
+              href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing">
+              This AI Chatbot</a> 
+              is trained to be your coding guide for this unit. You are in charge. Good questions get
               good answers. Gemini <i>will not</i> write code for you. You must be a problem solver.
             </p>
           </article>
