--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <li><a href="#/a">Criterion A</a></li>
               <li><a href="#/b">Criterion B</a></li>
               <li><a href="#/c">Criterion C</a></li>
+              <li><a href="#/miso">미소를 위한 특별 지침/a></li>
             </ul>
           </details>
           <a href="#vocabulary">Vocabulary</a>
@@ -970,6 +971,8 @@
               target="_blank" rel="noopener">ISL Academic Integrity Policy</a>
           </p>
         </section>
+
+        <section id="pagemiso" class="hidden"></section>
 
 
       </div>
