--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li><a href="#/a">Criterion A</a></li>
               <li><a href="#/b">Criterion B</a></li>
               <li><a href="#/c">Criterion C</a></li>
-              <li><a href="#/miso">미소를 위한 특별 지침/a></li>
+              <li><a href="#/miso">미소를 위한 특별 지침></li>
             </ul>
           </details>
           <a href="#vocabulary">Vocabulary</a>
