--- a/index.html
+++ b/index.html
@@ -936,7 +936,72 @@
           </p>
         </section>
 
-        <section id="pagemiso" class="hidden"></section>
+        <section id="pagemiso" class="hidden">
+          <header>
+            <h1>Criterion A — A4: Design Brief</h1>
+            <p class="meta">
+              <strong>Task:</strong> Write a short design brief explaining the focus of the unit and your specific role.
+              Keep your work to <strong>one page max</strong>. Use <strong>“we”</strong> for class goals and <strong>“I”</strong> for your goal.
+            </p>
+
+            <div class="links">
+              <p>
+                <strong>Links (add later):</strong><br />
+                <a href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0">Bits &amp; Bytes page</a> |
+                <a href="https://docs.google.com/document/d/13xhigZOotBNmDfeeOEQAepzStGmuRAkCX9X9IAfuURs/edit?usp=sharing">My portfolio template</a> |
+                <a href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing">ISL Apocalypse story page</a>
+              </p>
+            </div>
+          </header>
+
+          <section id="story">
+            <h2>1. Story (ISL Apocalypse)</h2>
+            <p class="prompt">
+              Summarize the ISL Apocalypse scenario in your own words. Explain how the escape room fits into the story.
+            </p>
+            <textarea placeholder="Write your story summary here..."></textarea>
+          </section>
+
+          <section id="bits-bytes">
+            <h2>2. Bits &amp; Bytes</h2>
+            <p class="prompt">
+              Explain how this project connects to Bits &amp; Bytes. Mention that the final escape room will be published as a public link for others to play.
+            </p>
+            <textarea placeholder="Write your Bits & Bytes connection here..."></textarea>
+          </section>
+
+          <section id="class-goal">
+            <h2>3. Class Goal (We)</h2>
+            <p class="prompt">
+              Describe what <strong>we</strong> are trying to achieve as a class.
+            </p>
+            <ul>
+              <li>We are building a class-wide <strong>digital escape room</strong>.</li>
+              <li>We are learning to code using <strong>HTML, CSS, and JavaScript</strong>.</li>
+              <li>We are working together to create one connected experience.</li>
+            </ul>
+            <textarea placeholder="Write your class goal summary here (use 'we')..."></textarea>
+          </section>
+
+          <section id="my-goal">
+            <h2>4. My Goal (I)</h2>
+            <p class="prompt">
+              Clearly state your individual focus. Your goal is to design and develop the <strong>landing page</strong> for the class-wide escape room.
+              You do not need to plan the page yet — detailed planning happens in Criterion B.
+            </p>
+            <textarea placeholder="Write your personal goal here (use 'I')..."></textarea>
+          </section>
+
+          <section id="submission">
+            <h2>Submission Notes</h2>
+            <ul>
+              <li>Label this section: <strong>Criterion A — A4</strong></li>
+              <li>Use the provided portfolio template.</li>
+              <li>Keep writing clear, focused, and within <strong>one page</strong>.</li>
+            </ul>
+          </section>
+
+        </section>
 
 
       </div>
