--- a/index.html
+++ b/index.html
@@ -845,9 +845,9 @@
 
           <p><strong>Task:</strong><br>
             Collaborate with your partner and with
-          <div class="toc" style="margin:10px 0 18px 0">
+          <a class="toc" style="margin:10px 0 18px 0">
             <a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing">Gemini AI</a>
-          </div>
+          </a>
           to turn your design into a working coded product using HTML, CSS, and JavaScript. Focus on
           writing clean, readable code and using your plan from C1 to guide your work.
           </p>
