--- a/index.html
+++ b/index.html
@@ -948,9 +948,9 @@
             <div class="links">
               <p>
                 <strong>Links:</strong><br />
-                <a class="toc" href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0">Bits &amp; Bytes page</a> |
-                <a class="toc" href="https://docs.google.com/document/d/13xhigZOotBNmDfeeOEQAepzStGmuRAkCX9X9IAfuURs/edit?usp=sharing">Miso's portfolio</a> |
-                <a class="toc" href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing">ISL Apocalypse story page</a>
+                <a class="toc" href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0" target="_blank" rel="noopener">Bits &amp; Bytes page</a> |
+                <a class="toc" href="https://docs.google.com/document/d/13xhigZOotBNmDfeeOEQAepzStGmuRAkCX9X9IAfuURs/edit?usp=sharing" target="_blank" rel="noopener">Miso's portfolio</a> |
+                <a class="toc" href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing" target="_blank" rel="noopener">ISL Apocalypse story page</a>
               </p>
             </div>
           </header>
