--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
               <a class="toc"
                 href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
                 target="_blank" rel="noopener">
-                ISL Apocalypse narrative</a><br>
-              Solving your puzzle must give the user a letter for the final room.
+                ISL Apocalypse narrative</a>?<br>
+              Solving your puzzle MUST give the user a letter for the final room.
               See the 
               <a class="toc"
                 href"https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
