--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-/*test*/
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="escape favicon.png">
+  <link rel="icon" type="image/png" href="escape-favicon.png">
   <title>Code 2 Escape — G9 Design (Escape → Unlock Unit)</title>
   <link rel="stylesheet" href="style.css">
 </head>
