--- a/index.html
+++ b/index.html
@@ -766,7 +766,10 @@
                   <th>Due Date</th>
                 </tr>
                 <tr>
-                  <td>Research how to collaborate with VS Code and GitHub</td>
+                  <td>Establish a 
+                    <a href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing"
+                      target="_blank" rel="noopener">workflow to collaborate with VS Code and GitHub</a>
+                  </td>
                   <td>Feb 02</td>
                 </tr>
                 <tr>
