--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                 </tr>
                 <tr>
                   <td>Establish a 
-                    <a href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing"
+                    <a class="toc" href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing"
                       target="_blank" rel="noopener">workflow to collaborate with VS Code and GitHub</a>
                   </td>
                   <td>Feb 02</td>
