--- a/index.html
+++ b/index.html
@@ -188,6 +188,20 @@
         </div>
 
         <div class="kicker">Unit Materials</div>
+          <div class="card" style="margin:12px 0 18px 0;">
+            <div class="inner" style="display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap;">
+              <div>
+                <div class="kicker" style="font-size:12px;">Countdown</div>
+                <h2 style="margin:6px 0 0 0;">
+                  Project due in <span id="dueDays">--</span> days
+                </h2>
+                <p class="muted" style="margin:6px 0 0 0;">
+                  Due date: <span id="dueDateLabel">May 22</span>
+                </p>
+              </div>
+              <span id="duePill" class="pill">loading…</span>
+            </div>
+          </div>
         <h2 id="overview">Code 2 Escape — Unit Hub</h2>
 
         <div class="toc" style="margin:10px 0 18px 0">
