--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 target="_blank" rel="noopener">ISL Apocalypse Story</a></li>
             <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank"
                 rel="noopener">AI Coding Coach</a></li>
-            <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
+            <li><a href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing" target="_blank" rel="noopener">GitHub Workflow</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing"
                 target="_blank" rel="noopener">Portfolio Templates</a></li>
             <li><a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank"
