--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       <div class="inner content">
 
         <!-- Top row: 75% status / 25% next summative -->
-        <div class="grid-75-25" style="margin-bottom:16px;">
-          <div class="card">
+      <div id="statusRow" class="grid-75-25" style="margin-bottom:16px;">
+        <div class="card">
             <div class="inner">
               <div class="kicker">Status</div>
               <p class="muted">✅ Unlocked on this browser</p>
