--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div>
             <div class="toc">
               <strong>Quick Links:</strong>
-              <ul>
+              <ul class="quick-links">
                 <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
                 <li><a href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing" target="_blank" rel="noopener">ISL Apocalypse Story</a></li>
                 <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank" rel="noopener">AI Coding Coach</a></li>
@@ -216,7 +216,7 @@
                 Project due in <span id="dueDays">--</span> days
               </h2>
               <p class="muted" style="margin-top:6px;">
-                March 22
+                Due: <span data-date="C3date"></span>
               </p>
             </div>
           </div>
