Added background message

--- a/index.html
+++ b/index.html
@@ -206,15 +206,17 @@
         <div class="toc" style="margin:10px 0 18px 0">
           <strong>Quick Links:</strong>
           <ul class="two-column-list">
-            <li><strong><a
-                  href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0"
-                  target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
+            <li><a
+                href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0"
+                target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
             <li><a
                 href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
                 target="_blank" rel="noopener">ISL Apocalypse Story</a></li>
             <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank"
                 rel="noopener">AI Coding Coach</a></li>
-            <li><a href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing" target="_blank" rel="noopener">GitHub Workflow</a></li>
+            <li><a
+                href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing"
+                target="_blank" rel="noopener">GitHub Workflow</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing"
                 target="_blank" rel="noopener">Portfolio Templates</a></li>
             <li><a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank"
