--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
                 target="_blank" rel="noopener">ISL Apocalypse Story</a></li>
             <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank"
                 rel="noopener">AI Coding Coach</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1FA4Gg2TGjBEu9hqkCMNpBoK7zbAPUT2QOIDB37iMh00/edit?slide=id.p#slide=id.p" target="_blank"
+                rel="noopener">AI Best Practices</a></li>
             <li><a
                 href="https://docs.google.com/presentation/d/10DWrv67lRLpi0XOIn-vhkEsXtpdRZHYGxte5eNOKAM0/edit?usp=sharing"
                 target="_blank" rel="noopener">GitHub Workflow</a></li>
