--- a/index.html
+++ b/index.html
@@ -222,8 +222,12 @@
           <!-- RIGHT: Countdown -->
           <div class="countdown-box card">
             <div class="inner">
-              <h3 style="margin-top:0;">
+              <h2 style="margin-top:0;">
                 Project due in <span id="dueDays">--</span> days
+              </h2>
+              <h3>
+                March 22 for project<br>
+                March 29 for entire portfolio
               </h3>
             </div>
           </div>
